[project]
name = "netunicorn-connector-aci"
version = "0.1.1"
authors = [
    {name = "Roman Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "Azure Container Instances connector for netunicorn"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["netunicorn"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "netunicorn-director-infrastructure >= 0.2.0",
    "netunicorn-base >= 0.2.0",
    "pyyaml",
    "returns",
    "azure-mgmt-resource",
    "azure-mgmt-containerinstance",
    "azure-identity",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true